--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a-text value="test text" align="center" width="3"></a-text>
             </a-plane>
 
-            <a-plane id="textBorder" width="0.58" height="0.25" color="black" position="-0.6 0.295 -0.5" material="shader:flat">
+            <a-plane id="textBorder" width="0.58" height="0.25" color="black" position="-0.57 0.295 -0.5" material="shader:flat">
                 <a-plane id="textBar" width="0.55" height="0.23" color="grey" position="0.005 0 0.01" material="shader:flat">
                     <a-text id="infoTitle" width="1" value="test" align="center" position="0 0.09 0" color="black" shader="flat"></a-text>
                     <a-text id="infoText" width="0.55" value="Test" align="center" position="0 -0.02 0" shader="flat" wrapcount="20"></a-text>
@@ -113,14 +113,14 @@
         <a-entity id="storageP" class="placesModel" gltf-model="#storage-model" scale="1.25 1.25 1.25" rotation="0 -90 0" position="3 4 -6" modelopacity = "0.3" title="Opslag" infoText="Dit is het lange termijn geheugen, het slaat alle data op die langdurig bewaard moeten worden. Het maakt gebruik van SATA-kabels om aan het moederbord aangesloten te worden. Ze hebben ook een stroom kabel nodig van de Power Supply Unit."></a-entity>
         <a-entity class="picksModel" gltf-model="#storage-model" modelopacity="1" scale="1.25 1.25 1.25" rotation="0 -90 0" position="5 0.1 4.5" title="Opslag" infoText="Dit is het lange termijn geheugen, het slaat alle data op die langdurig bewaard moeten worden. Het maakt gebruik van SATA-kabels om aan het moederbord aangesloten te worden. Ze hebben ook een stroom kabel nodig van de Power Supply Unit."></a-entity>
 
-        <a-entity class="placesModel" id="cpuCoolerP" gltf-model="#cpuCooler-model" scale="1.1 1.1 1.1" rotation="90 0 0" position="-1.6 4.7 -6.17" modelopacity="0" title="CPU cooler" infoText="De CPU verbruikt veel stroom en wordt daardoor ook snel warm, de CPU mag niet te warm worden want dan beschadigt die. Hiervoor is de CPU koeler. Dit is meestal een ventilator met een heatsink die de hitte opvangt. De koeler wordt bovenop de CPU geplaatst doormiddel van schroefjes en een soort lijm."></a-entity>
+        <a-entity class="placesModel" id="cpuCoolerP" gltf-model="#cpuCooler-model" scale="1.1 1.1 1.1" rotation="90 0 0" position="-1.6 10.7 -6.17" modelopacity="0" title="CPU cooler" infoText="De CPU verbruikt veel stroom en wordt daardoor ook snel warm, de CPU mag niet te warm worden want dan beschadigt die. Hiervoor is de CPU koeler. Dit is meestal een ventilator met een heatsink die de hitte opvangt. De koeler wordt bovenop de CPU geplaatst doormiddel van schroefjes en een soort lijm."></a-entity>
         <a-entity class="picksModel" gltf-model="#cpuCooler-model" modelopacity="1" scale="1.1 1.1 1.1" rotation="90 -90 0" position="6 1 3" title="CPU cooler" infoText="De CPU verbruikt veel stroom en wordt daardoor ook snel warm, de CPU mag niet te warm worden want dan beschadigt die. Hiervoor is de CPU koeler. Dit is meestal een ventilator met een heatsink die de hitte opvangt. De koeler wordt bovenop de CPU geplaatst doormiddel van schroefjes en een soort lijm."></a-entity>
 
         <a-entity class="placesModel" id="fanP" gltf-model="#fan-model" position="3 1.2 -5" rotation="0 -90 0" modelopacity="0.3" title="Ventilator" infoText="De CPU is niet het enige onderdeel dat warmte genereert, daarom is het aangeraden om extra koeling aan de pc toe te voegen. De beste manier om dit te doen is door ventilators aan de voorkant van de pc te plaatsen."></a-entity>
         <a-entity class="picksModel" gltf-model="#fan-model" position="6.5 1.2 -2.5" rotation="0 -90 0"  modelopacity="1" title="Ventilator" infoText="De CPU is niet het enige onderdeel dat warmte genereert, daarom is het aangeraden om extra koeling aan de pc toe te voegen. De beste manier om dit te doen is door ventilators aan de voorkant van de pc te plaatsen."></a-entity>
 
-        <a-entity class="placesModel" modelopacity="0.3" id="psuP" gltf-model="#psu-model" position="-2.7 8 -5.5" rotation="180 0 0" title="Power Supply Unit" infoText="De Power supply unit zorgt ervoor dat alle onderdelen van genoeg stroom worden voorzien. "></a-entity>
-        <a-entity class="picksModel" gltf-model="#psu-model" position="7.3 -2 4" rotation="0 0 0" title="Power Supply Unit" infoText="De Power supply unit zorgt ervoor dat alle onderdelen van genoeg stroom worden voorzien. "></a-entity>
+        <a-entity class="placesModel" id="psuP" modelopacity="0.3" id="psuP" gltf-model="#psu-model" position="-2.7 5.5 -5.2" rotation="180 0 0" title="Power Supply Unit" infoText="De Power supply unit zorgt ervoor dat alle onderdelen van genoeg stroom worden voorzien. "></a-entity>
+        <a-entity class="picksModel" modelopacity="1" gltf-model="#psu-model" position="7.3 1 4" rotation="0 0 0" title="Power Supply Unit" infoText="De Power supply unit zorgt ervoor dat alle onderdelen van genoeg stroom worden voorzien. "></a-entity>
 
         <a-entity obj-model = "obj: #kast-obj; mtl: #kast-mtl" position="0 3 -5" rotation= "0 180 0"> </a-entity>
 
@@ -128,7 +128,7 @@
 
         <a-plane id="finishScreen"color = "#646464" width="5" height="5" position="0 1 -2.9" >
             <a-text align="center" value="Gefeliciteerd" position="0 2 0" color="black" width="8" ></a-text>
-            <a-text align="center" id="tutorialText" value="Het is je gelukt! je hebt een PC in elkaar gezet! Hopelijk hebben we je voldoende geleerd zodat je een echte PC in elkaar kan zetten. De PSU zit vaak achterin aan de boven- of onderkant van de kast. De PSU is ook het onderdeel waar de elektriciteit kabel van de muur naar de pc wordt ingeplugd." position="0 0.8 0" color="white"></a-text>
+            <a-text align="center" id="tutorialText" value="Het is je gelukt! je hebt een PC in elkaar gezet! Hopelijk hebben we je voldoende geleerd zodat je een echte PC in elkaar kan zetten." position="0 0.8 0" color="white"></a-text>
             <a-plane class="finishButton" id="done" width="1" height="0.5" color="white" position="0 -0.4 0.1">
                 <a-text value="Oke" align="center" color="black"></a-text>
             </a-plane>
